Add Docker support, .env configuration, and initial README documentation